--- a/generator.html
+++ b/generator.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="./generator.css">
-    <title>Quote Generator</title>
-    <header>Inspirational Quotes</header>
-    <h1>Click here to generate a random inspirational Quote</h1>
+    <title>Random Item Generator</title>
+    <header>Random Item Generator</header>
+    <h1>Click here to generate a random item...</h1>
     <button >Generate</button>
     <h2 id=""></h2> <!--Conatiner for quote-->
     <h3></h3> <!--Container for author of quote-->
