finish up base requirements of generation

--- a/generator.html
+++ b/generator.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="./generator.css">
-    <title>Random Item Generator</title>
-    <header>Random Item Generator</header>
-    <h1>Click here to generate a random item...</h1>
-    <button >Generate</button>
-    <h2 id=""></h2> <!--Conatiner for quote-->
-    <h3></h3> <!--Container for author of quote-->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./generator.css">
+        <title>Random Item Generator</title>
+    </head>
+    <body>
+        <h1>Click generate to create a random item.</h1>
+        <button id="generateButton">Generate</button>
+        <div id="displayVariable"></div>
+        <script src="generator.js" charset="UTF-8"></script>
+    </body>
 </html>
